@@ -9,6 +9,7 @@ sentry.db.models.fields
 from __future__ import absolute_import
 
 from .bounded import *  # NOQA
+from .encrypted import *  # NOQA
 from .foreignkey import *  # NOQA
 from .gzippeddict import *  # NOQA
 from .node import *  # NOQA
