@@ -3,10 +3,10 @@ from __future__ import absolute_import, print_function
 from bitfield import BitField
 from django.db import models
 from django.utils import timezone
-from jsonfield import JSONField
 
 from sentry.db.models import (
-    BoundedPositiveIntegerField, FlexibleForeignKey, Model, sane_repr
+    BoundedPositiveIntegerField, EncryptedJsonField, FlexibleForeignKey, Model,
+    sane_repr
 )
 
 
@@ -15,7 +15,7 @@ class AuthProvider(Model):
 
     organization = FlexibleForeignKey('sentry.Organization', unique=True)
     provider = models.CharField(max_length=128)
-    config = JSONField()
+    config = EncryptedJsonField()
 
     date_added = models.DateTimeField(default=timezone.now)
     sync_time = BoundedPositiveIntegerField(null=True)
